# baichat

./: README.md  io.github.alexkdeveloper.baichat.json  meson.build
data/: baichat.gresource.xml  io.github.alexkdeveloper.baichat.appdata.xml.in  io.github.alexkdeveloper.baichat.desktop.in  io.github.alexkdeveloper.baichat.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: window.blp
po/: POTFILES  meson.build
src/: baichat.in  constants.py.in  main.py  meson.build  window.py
